--- a/index.html
+++ b/index.html
@@ -242,10 +242,11 @@
               <span class="message">
                 {{
                   (item.message === '-用户进入视频聊天室-') && (item.from_id === mainModel.targetUser.id)
-                      ? '对方进入视频面试间'
+                      ? '对方邀请你进入视频面试间'
                       : item.message
                 }}
-                <el-button v-if="(item.message==='-用户进入视频聊天室-') && (item.from_id===mainModel.targetUser.id)" round size="mini" type="success" @click="chatViewVideo">进入视频面试间</el-button>
+                <el-button v-if="(item.message==='-用户进入视频聊天室-') && (item.from_id===mainModel.targetUser.id)" round size="mini" type="success" @click="chatViewVideo">接受</el-button>
+                <el-button v-if="(item.message==='-用户进入视频聊天室-') && (item.from_id===mainModel.targetUser.id)" round size="mini" type="danger" @click="sendMessage('-已拒绝邀请-');">拒绝</el-button>
               </span>
               <span class="time">{{ moment(new Date(item.timestamp)).format('YYYY-MM-DD hh:mm:ss') }}</span>
             </div>
