--- a/index.html
+++ b/index.html
@@ -601,6 +601,52 @@
               <div class="to-chat offline" @click="chatToCompany(item.companyName, item.companyId)">给TA留言（离线）</div>
             </div>
             <!--/展位单元-->
+            <!--展位单元-->
+            <div v-for="item in companyList" v-if="item.companyName.indexOf(searchCompanyKeyword)>-1 || JSON.stringify(item.recruitModelList).indexOf(searchCompanyKeyword.trim())>-1" :class="{'offline': !item.lastUpdateDate || moment().diff(moment(item.lastUpdateDate),'minutes')>offlineTimeout}" class="company-item">
+              <!--<div class="DEBUG" style=" z-index: 9999999999; position: absolute; color:#FFF;">{{}}</div>-->
+              <!--公司名称-->
+              <div class="company_name" title="点击查看详情" @click="showCurrentCompanyInfo(item.companyId)">
+                <span>{{ item.companyName }}</span>
+              </div>
+              <div class="company_lastUpdateDate">刷新时间：{{ item.lastUpdateDate }}</div>
+              <!--职位列表-->
+              <!--根据业务要求，点击查看职位列表改成点击查看企业详情和职位列表<div @click="showRecruitList(item.companyId)" class="recruit-list">-->
+              <div class="recruit-list" @click="showCurrentCompanyInfo(item.companyId)">
+                <div class="recruit-list_panel" title="点击投递职位">
+                  <div class="recruit-item">
+                    <div class="see-more">查看更多</div>
+                  </div>
+                  <div v-for="(recruitItem, recruitIndex) in item.recruitModelList" v-if="item.recruitModelList" class="recruit-item">
+                    <div class="job-title">{{ (parseInt(recruitIndex) + 1) + '. ' + recruitItem.jobTitle }}</div>
+                    <div v-if="recruitItem.salary==='1000元以下'" class="salary">1K内</div>
+                    <div v-if="recruitItem.salary==='1500-2000元'" class="salary">1.5-2K</div>
+                    <div v-if="recruitItem.salary==='2000-2500元'" class="salary">2-2.5K</div>
+                    <div v-if="recruitItem.salary==='2500-3000元'" class="salary">2.5-3K</div>
+                    <div v-if="recruitItem.salary==='3000-3500元'" class="salary">3-3.5K</div>
+                    <div v-if="recruitItem.salary==='3500-4000元'" class="salary">3.5-4K</div>
+                    <div v-if="recruitItem.salary==='4000-5000元'" class="salary">4-5K</div>
+                    <div v-if="recruitItem.salary==='5000-6000元'" class="salary">5-6K</div>
+                    <div v-if="recruitItem.salary==='6000-8000元'" class="salary">6-8K</div>
+                    <div v-if="recruitItem.salary==='8000-10000元'" class="salary">8-10K</div>
+                    <div v-if="recruitItem.salary==='10000-15000元'" class="salary">10-15K</div>
+                    <div v-if="recruitItem.salary==='15000元以上'" class="salary">15K以上</div>
+                    <div v-if="recruitItem.salary==='面议'" class="salary">面议</div>
+                  </div>
+                </div>
+              </div>
+              <!--HR-->
+              <div :style="{backgroundImage:'url(images/pic_hr_'+(item.companyId%16+1)+'.png)'}" class="hr"></div>
+              <!--Table-->
+              <div class="table"></div>
+              <!--JobSeeker-->
+              <div :style="{backgroundImage:'url(images/pic_jobseeker_'+(item.companyId%8+1)+'.png)'}" class="job-seeker"></div>
+              <!--Chair-->
+              <div class="chair"></div>
+              <!--立即沟通-->
+              <div class="to-chat" @click="chatToCompany(item.companyName, item.companyId)">立即沟通</div>
+              <div class="to-chat offline" @click="chatToCompany(item.companyName, item.companyId)">给TA留言（离线）</div>
+            </div>
+            <!--/展位单元-->
           </div>
         </div>
       </div>
@@ -1004,6 +1050,8 @@
       '.out_panel_bottom1':  {width: '1780px'},
       '.out_border_1':       {width: '1746px'},
       '.company-list_panel': {width: '1712px'},
+      '.company-item':       {zoom: 1},
+      '.job-seeker_item':    {zoom: 1},
     };
     var cssResult = cssobj(obj);
 
@@ -1012,6 +1060,13 @@
       var _baseWidth = '1780';
       if (window.innerWidth < 1780) {
         _baseWidth = window.innerWidth;
+      }
+      if (window.innerWidth < 1367) {
+        obj['.company-item'].zoom    = '0.935';
+        obj['.job-seeker_item'].zoom = '0.935';
+      } else {
+        obj['.company-item'].zoom    = '1';
+        obj['.job-seeker_item'].zoom = '1';
       }
 
       obj['#top-bar'].width            = (_baseWidth) + 'px';
