--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <div id="header">
     <div class="header_panel">
       <a class="to_home" href="/">返回首页</a>
-      <ul v-if="activityRecord" id="count_panel">
+      <ul v-if="activityRecord" id="count_panel" class="cj-hide">
         <li>浏览量&nbsp;<span>{{ activityRecord.pageviews }}</span>，</li>
         <li>参会企业&nbsp;<span>{{ activityRecord.companyCount }}</span>，</li>
         <li>招聘人数&nbsp;<span>{{ activityRecord.requireCount }}</span></li>
