--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <div v-if="!activityAlreadyStarted" class="title">会议开始倒计时</div>
             <div v-if="activityEndTime" id="countdown_time" class="cj-block">
               <span v-if="activityAlreadyStarted" class="time">{{ activityEndTime.day }}</span>
-              <span v-if="!activityAlreadyStarted" class="time">{{ activityEndTime.day - 1 }}</span>
+              <span v-if="!activityAlreadyStarted" class="time">{{ activityEndTime.day }}</span>
               <span class="char">天</span>
               <span class="time">{{ activityEndTime.hour }}</span>
               <span class="char">时</span>
