--- a/index.html
+++ b/index.html
@@ -300,7 +300,9 @@
                 <div class="cj-inline-block" @click="invite2videoChat">
                   <el-button icon="el-icon-video-camera-solid" plain size="mini" type="primary">视频沟通</el-button>
                 </div>
-
+                <div class="cj-inline-block" @click="downloadChatLog">
+                  <el-button icon="el-icon-download" plain size="mini" type="primary">下载聊天记录</el-button>
+                </div>
                 <el-popover v-if="!afkMode" ref="afkChat" placement="top" trigger="click" width="300">
                   <div class="afk-message" @click="setAfkON('你好，我现在有事不在，一会再和你联系……')">你好，我现在有事不在，一会再和你联系……</div>
                   <div class="afk-message" @click="setAfkON('工作中，请勿打扰。')">工作中，请勿打扰。</div>
@@ -1089,7 +1091,7 @@
   <!-- /区域内放置Dialog -->
 </div>
 <!--/主内容-->
-<script src="index.js?v=20220221a"></script>
+<script src="index.js?v=20220221abcd"></script>
 <script>
   //根据浏览器窗口宽度计算内容框体宽度
   (function() {
