--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
   <script src="//pv.sohu.com/cityjson?ie=utf-8"></script>
   <!--热键功能-->
   <script src="node_modules/hotkeys-js/dist/hotkeys.min.js"></script>
+  <!--二维码库-->
+  <script src="node_modules/qrcodejs/qrcode.min.js"></script>
   <script>
     Vue.config.devtools = true;
   </script>
@@ -631,14 +633,15 @@
                  class="company-item">
               <!--<div class="DEBUG" style=" z-index: 9999999999; position: absolute; color:#FFF;">{{}}</div>-->
               <!--公司名称-->
-              <div class="company_name" title="点击查看详情" @click="showCurrentCompanyInfo(item.companyId)">
+              <div class="company_name" title="点击查看详情" @click="showCurrentCompanyInfo2(item.enCompanyId)">
                 <span>{{ item.companyName }}</span>
-                <div class="VIP_flag" v-if="item.companyCode.toUpperCase().indexOf('VIP')>-1"></div>
+                <!--TODO 新版这里数据没有VIP标志了，需要解决-->
+                <div v-if="item.companyCode.toUpperCase().indexOf('VIP')>-1" class="VIP_flag"></div>
               </div>
               <div class="company_lastUpdateDate">刷新时间：{{ item.lastUpdateDate }}</div>
               <!--职位列表-->
               <!--根据业务要求，点击查看职位列表改成点击查看企业详情和职位列表<div @click="showRecruitList(item.companyId)" class="recruit-list">-->
-              <div class="recruit-list" @click="showCurrentCompanyInfo(item.companyId)">
+              <div class="recruit-list" @click="showCurrentCompanyInfo2(item.enCompanyId)">
                 <div class="recruit-list_panel" title="点击投递职位">
                   <div class="recruit-item">
                     <div class="see-more">查看更多</div>
@@ -676,8 +679,10 @@
               <!--Chair-->
               <div class="chair"></div>
               <!--立即沟通-->
-              <div class="to-chat" @click="chatToCompany(item.companyName, item.companyId)">立即沟通</div>
-              <div class="to-chat offline" @click="chatToCompany(item.companyName, item.companyId)">
+              <!--<div class="to-chat" @click="chatToCompany(item.companyName, item.companyId)">立即沟通</div>-->
+              <div class="to-chat" @click="showQrcode2Company(item.enCompanyId)">立即沟通</div>
+              <!--<div class="to-chat offline" @click="chatToCompany(item.companyName, item.companyId)">-->
+              <div class="to-chat offline" @click="showQrcode2Company(item.enCompanyId)">
                 给TA留言（离线）
               </div>
             </div>
@@ -801,9 +806,10 @@
     <div v-if="currentCompanyInfo">
       <div class="company-info_name">{{ currentCompanyInfo.companyName }}</div>
       <ul class="company-info_other split">
-        <li>{{ currentCompanyInfo.entProp }}</li>
-        <li>{{ currentCompanyInfo.persons ? currentCompanyInfo.persons : "-人数未填写-" }}</li>
-        <li>{{ currentCompanyInfo.industry ? currentCompanyInfo.industry : "-未填写-" }}</li>
+        <li v-if="currentCompanyInfo.entPropValue">{{ currentCompanyInfo.entPropValue }}</li>
+        <li>{{ currentCompanyInfo.employeesValue ? currentCompanyInfo.employeesValue : "-人数未填写-" }}</li>
+        <!--这里因为老系统迁移数据过来industryValue可能没有对应的行业数据是null，所以改成是null就不显示-->
+        <li v-if="currentCompanyInfo.industryValue">{{ currentCompanyInfo.industryValue }}</li>
       </ul>
       <div class="company-info_address">{{
           currentCompanyInfo.address ? currentCompanyInfo.address : "-公司地址未填写-"
@@ -811,7 +817,7 @@
       </div>
       <div class="company-info_subtitle">企业简介</div>
       <div class="company-info_content company-info_desc cj-ellipsis-multiline">
-        {{ currentCompanyInfo.companyInfo }}
+        {{ currentCompanyInfo.companyIntr }}
         <div class="unfold" @click="doFold('#company-info')">【展开】</div>
         <div class="fold" @click="doFold('#company-info')">【收拢】</div>
       </div>
@@ -821,32 +827,24 @@
         <div class="company-info-recruit-list">
           <div v-for="recruitItem in currentRecruitList" class="company-info-recruit_item">
             <div class="job-title" @click="showRecruitInfo(recruitItem.recruitId)">
-              {{ recruitItem.recruitName }}
+              {{ recruitItem.jobTitle }}
             </div>
             <ul class="recruit-other-info split">
               <li>
-                <span v-if="recruitItem.salary==='1000元以下'">1K内</span>
-                <span v-if="recruitItem.salary==='1500-2000元'">1.5-2K</span>
-                <span v-if="recruitItem.salary==='2000-2500元'">2-2.5K</span>
-                <span v-if="recruitItem.salary==='2500-3000元'">2.5-3K</span>
-                <span v-if="recruitItem.salary==='3000-3500元'">3-3.5K</span>
-                <span v-if="recruitItem.salary==='3500-4000元'">3.5-4K</span>
-                <span v-if="recruitItem.salary==='4000-5000元'">4-5K</span>
-                <span v-if="recruitItem.salary==='5000-6000元'">5-6K</span>
-                <span v-if="recruitItem.salary==='6000-8000元'">6-8K</span>
-                <span v-if="recruitItem.salary==='8000-10000元'">8-10K</span>
-                <span v-if="recruitItem.salary==='10000-15000元'">10-15K</span>
-                <span v-if="recruitItem.salary==='15000元以上'">15K以上</span>
-                <span v-if="recruitItem.salary==='面议'">面议</span>
+                薪资
+                <span v-if="!recruitItem.salaryRangeStartValue && !recruitItem.salaryRangeEndValue">面议</span>
+                <span v-if="recruitItem.salaryRangeStartValue && recruitItem.salaryRangeEndValue">{{recruitItem.salaryRangeStartValue}}-{{recruitItem.salaryRangeEndValue}}</span>
+                <span v-if="!recruitItem.salaryRangeStartValue && recruitItem.salaryRangeEndValue">{{recruitItem.salaryRangeEndValue}}</span>
+                <span v-if="recruitItem.salaryRangeStartValue && !recruitItem.salaryRangeEndValue">{{recruitItem.salaryRangeStartValue}}</span>
               </li>
               <li>
-                学历要求{{ recruitItem.lowerEdu }}
+                学历要求{{ recruitItem.eduValue?recruitItem.eduValue:'无' }}
               </li>
               <li>
-                经验{{ recruitItem.workYears }}
+                经验{{ recruitItem.workYearsRangeValue?recruitItem.workYearsRangeValue:'不限' }}
               </li>
               <li>
-                招{{ recruitItem.persons === 0 ? "若干" : recruitItem.persons }}人
+                招{{ recruitItem.persons?recruitItem.persons: "若干" }}人
               </li>
             </ul>
             <!--TODO 现场接口中没有这个字段，无法显示，需要后端加上-->
@@ -1093,6 +1091,16 @@
   </el-dialog>
   <!-- /登录提示Dialog -->
   <!-- /区域内放置Dialog -->
+  <!--微信扫码 和企业聊天-->
+  <el-dialog id="qrcode2Company_dialog" :visible.sync="qrcode2CompanyDialog" title="请用微信扫描下方二维码" width="520px" @opened="makeCompanyQrcode">
+    <div id="qrcode2Company__panel">
+      <div class="text">
+        请用微信扫描上方二维码和企业沟通。<br/>
+        <span>您需要先登录湖南人才网微信小程序方可使用。</span>
+      </div>
+    </div>
+  </el-dialog>
+  <!--/微信扫码 和企业聊天-->
 </div>
 <!--/主内容-->
 <script src="index.js"></script>
