--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div v-if="!activityInfo.otherUrl" class="title">{{ activityInfo.productName }}</div>
       <div v-if="!activityInfo.otherUrl" class="desc">主办单位：{{ nl2br(activityInfo.remark || "") }}</div>
       <div v-if="!activityInfo.otherUrl" class="memo">
-        <div>{{ nl2br(activityInfo.productIntr || "") }}</div>
+        <div v-html="nl2br(activityInfo.productIntr || '')"></div>
         <div>{{ activityInfo.activityAddress }}</div>
         <div>
           {{ activityInfo.holdingTime.substr(0, 10) }} {{ activityInfo.holdingZone }}
